fixed flash page alert not showing up

--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -33,7 +33,7 @@ body {
 // }
 
 div.alert-danger {
-  margin: -100px auto;
   width: 100%;
   position: absolute;
+  text-align: center;
 }
